ping-pong-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ppa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ppa
  template:
    metadata:
      labels:
        app: ppa
    spec:
      containers:
        - name: ppa
          image: matibrax/ppa.01
