ping-pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ppa
  namespace: logppa
spec:
  type: NodePort
  selector:
    app: ppa
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3005
